--- a/Laboratorio06/app/build.gradle
+++ b/Laboratorio06/app/build.gradle
@@ -47,5 +47,8 @@ dependencies {
     implementation'com.google.code.gson:gson:2.8.8'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 
 }
