--- a/Laboratorio06/app/src/main/AndroidManifest.xml
+++ b/Laboratorio06/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.Laboratorio06"
         tools:targetApi="31">
         <activity
+            android:name=".CityImageViewActivity"
+            android:exported="false"
+            android:label="@string/title_activity_city_image"
+            android:theme="@style/Theme.Laboratorio06" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
